[metadata]
name = data_iq
version = 0.1.0
description = Data-IQ: Characterizing subgroups with heterogeneous outcomes in tabular data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://arxiv.org/abs/2202.08836
author = Nabeel Seedat
license = MIT
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Artificial Intelligence
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
keywords = data-centric AI, data quality, uncertainty

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    =data_iq
#python_requires == 3.7

install_requires =
    autograd_lib
    numpy
    torch>=1.9.1
    torchvision==0.11.1
    importlib-metadata; python_version<"3.8"


[options.packages.find]
where = data_iq